--- a/Customer/src/main/AndroidManifest.xml
+++ b/Customer/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.polito.lab1">
 
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +21,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".EditActivity" android:parentActivityName=".MainActivity"/>
-    </application>
 
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="it.polito.lab1"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+    </application>
 </manifest>
